--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,34 @@
+body {
+    font-family: Roboto;
+    background: #ffffff;
+    color: #212121;
+}
+
+a {
+    text-decoration: none;
+}
+
+li {
+    list-style-type: none;
+}
+
 .header {
-    width: 1440px;
     height: 72px;
     flex-shrink: 0;
+    background: var(--white, #FFF);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .header-list {
-    display: inline-flex;
+    display: flex;
+    padding-left: 36px;
+    align-items: center;
 }
 
 .logo {
-    color: #212121;
+    color: var(--navyblue, #2E2F42);
     display: inline-flex;
     height: 24px;
     align-items: center;
@@ -24,10 +43,14 @@
 }
 
 .web {
-    color: var(--iris, #4D5AE5);
+    color: #4D5AE5;
 }
 
-.list-item {
+.list {
+    display: inline-flex;
+}
+
+.list-item a {
     color: var(--navyblue, #2E2F42);
     font-family: Roboto;
     font-size: 16px;
@@ -36,11 +59,11 @@
     line-height: 24px;
     letter-spacing: 0.32px;
     display: inline-flex;
-    margin: 0 0 0 0;
+    margin-left: 40px;
 }
 
-.list-address {
-    color: var(--slate, #434455);
+.list-address a {
+    color: #434455;
     font-family: Roboto;
     font-size: 16px;
     font-style: normal;
@@ -48,4 +71,45 @@
     line-height: 24px;
     letter-spacing: 0.32px;
     display: inline-flex;
+    margin: 24px 20px 24px 20px;
+}
+
+.hero {
+    height: 600px;
+    flex-shrink: 0;
+    background: var(--navyblue, #2E2F42);
+    color: #ffffff;
+}
+
+.hero-item {
+    color: var(--white, #ffffff);
+    text-align: center;
+    font-family: Roboto;
+    font-size: 56px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 60px;
+    letter-spacing: 1.12px;
+    margin: 0 472px 40px 472px;
+    padding-top: 188px;
+}
+
+.button {
+    text-align: center;
+    display: inline-flex;
+    padding: 16px 32px;
+    align-items: flex-start;
+    gap: 10px;
+    border-radius: 4px;
+    background: var(--iris, #4D5AE5);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    color: var(--white, #FFF);
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.64px;
+    box-sizing: border-box;
+    margin: 0 0 0 635px;
 }
