--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,11 @@
 body {
     background: #ffffff;
     color: #212121;
+    font-family: "Roboto" sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
 }
 
 a {
