--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ span {
 address {
     font-style: normal;
 }
+
 /* Header section */
 
 .header {
@@ -58,12 +59,12 @@ address {
 }
 
 .list-item {
-    color: var(--navyblue, #2e2f42);
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    color: var(--navyblue, #2e2f42);
 }
 
 .list-item:hover {
@@ -75,12 +76,12 @@ address {
 }
 
 .address-item {
-    color: var(--navyblue, #434455);
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    color: var(--navyblue, #434455);
 }
 
 .address-item:hover {
@@ -205,6 +206,10 @@ address {
     letter-spacing: 0.72px;
     text-transform: capitalize;
     text-align: center;
+}
+
+.team-list {
+    background-color: #FFFFFF;
 }
 
 .team-name {
